Sun Aug 03 02:32:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimDebugWindow.cpp:
	* src/main.cpp:
	  - fprintf()s have been changed to qDebug() and friends.

Sun Aug 03 01:51:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - The Add Buddy button is no longer enabled when no accounts are
	    signed on. Thanks to treke for reporting this bug.

Sat Aug 02 19:40:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimDialogs.cpp:
	  - Fixed a compiler error that occurred on the gcc I'm using for arm.
	    Picky picky.

Sat Aug 02 19:36:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - <font face="..."> lines with uninstalled fonts were causing QTextView
	    to crash, at least on qtopia-free. We now strip these. Who wants to
	    render people's custom fonts on their PDA anyway? As if they'd even
	    have them installed half the time.

Sat Aug 02 02:15:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	  - Changing the cut-off point to 16 characters. I *will* find a
	    better solution than this. Bet on it.

Sat Aug 02 02:13:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Clicking Add Buddy when a group or a buddy is selected will now
	    default the new buddy to that group.

Sat Aug 02 02:09:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp:
	* src/QGaimAccountBox.h:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Buddies can now be added to the buddy list.

Sat Aug 02 02:07:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	  - The notification UI now does its best to enforce word wrapping
	    in the text being displayed.

Sat Aug 02 01:38:37 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountBox.cpp: